--- a/styles/index.css
+++ b/styles/index.css
@@ -8,61 +8,60 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 .container {
-    width: 1152px;
-    height: 700px;
+    width: 70%;
+    min-height: 50%;
     background-color: rgb(83, 39, 39); 
     padding: 25px;
     display: flex;
     position: relative;
-    gap: 10px;
-    column-gap: 20px;
     flex-wrap: wrap;
+    flex-direction: column;
 }
+
 
 .box {
     background-color:#F48C06;
     width: 468px;
-    height: 160px;
-    margin: 20px;
+    height: 160PX;
     display: flex;
+    margin: 20px;
+    padding: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
     flex-wrap: wrap;
-    position: absolute;
-    margin-top: 90px;
-    margin-left: 9opx;
-    margin: 20px;
-    padding: 20px;
 
 }
 
-#first {
+.box__one {
     width: 70px;
     height: 70px;
     background-color: brown;
     padding: 20px;
     margin: 20px;
+    flex-wrap: wrap;
+    display: flex;
+
+
 }
-#second {
+.box__two {
     width: 70px;
     height: 70px;
     background-color: brown;
     padding: 20px;
     margin: 20px;
+    flex-wrap: wrap;
+    display: flex;
 }
     
-
-#third { 
+.box__three { 
     width: 70px;
     height: 70px;
     background-color: brown;
     padding: 20px;
     margin: 20px;
+    flex-wrap: wrap;
+    display: flex;
 }
-
-
-
-
-
 
