--- a/styles/index.css
+++ b/styles/index.css
@@ -10,58 +10,147 @@ body{
     justify-content: center;
 }
 .container {
-    width: 70%;
-    min-height: 50%;
+    width:1152px ;
+    height: 700px;
     background-color: rgb(83, 39, 39); 
-    padding: 25px;
+    padding: 25px 0;
     display: flex;
-    position: relative;
+   
     flex-wrap: wrap;
-    flex-direction: column;
+   
 }
 
-
-.box {
+.box-one {
     background-color:#F48C06;
     width: 468px;
     height: 160PX;
     display: flex;
-    margin: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px;
+}
+.box-one__box {
+    width: 70px;
+    height: 70px;
+    background-color: brown;
     padding: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    flex-wrap: wrap;
-
-}
-
-.box__one {
-    width: 70px;
-    height: 70px;
-    background-color: brown;
-    padding: 20px;
-    margin: 20px;
-    flex-wrap: wrap;
-    display: flex;
-
-
-}
-.box__two {
-    width: 70px;
-    height: 70px;
-    background-color: brown;
-    padding: 20px;
-    margin: 20px;
+    margin: 15px;
     flex-wrap: wrap;
     display: flex;
 }
+
+.box-two {
+    background-color:#F48C06;
+    width: 468px;
+    height: 160PX;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px; 
+}
+.box-two__box {
+    width: 78px;
+    height: 110px;
+    background-color: brown;
+    padding: 10px;
+    border-radius: 4px;
+    flex-wrap: wrap;
+    display: flex;
+    margin: 10px; 
+    justify-content: space-evenly;
+}
+
+
+.box-three {
+    background-color:#F48C06;
+    width: 468px;
+    height: 160PX;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px; 
+} 
+.box-three__box { 
+    width: 70px;
+    height: 70px;
+    background-color: brown;
+    padding: 10px;
+    margin: 20px;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.box-four {
+    background-color:#F48C06;
+    width: 468px;
+    height: 160PX;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px; 
+}
+.box-four__box {
+    width: 70px;
+    height: 70px;
+    background-color: brown;
+    padding: 10px;
+    margin: 15px;
+    flex-wrap: wrap;
+    display: flex;
+    align-items: flex-start;
     
-.box__three { 
+}
+
+.box-five {
+    background-color:#F48C06;
+    width: 468px;
+    height: 160PX;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px; 
+}
+
+.box-five__box {
+    width: 78px;
+    height: 110px;
+    background-color: brown;
+    padding: 10px;
+    margin: 20px;
+
+    display: flex; 
+    border-radius: 4px; 
+}
+
+
+.box-six {
+    background-color:#F48C06;
+    width: 468px;
+    height: 160PX;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    border-radius: 5px; 
+}
+.box-six__box {
     width: 70px;
     height: 70px;
     background-color: brown;
-    padding: 20px;
+    padding: 10px;
     margin: 20px;
     flex-wrap: wrap;
-    display: flex;
+    display: flex;  
 }
-
